@@ -1,1 +1,11 @@
-Changes are happening! :)
+# Changelog
+
+The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0), 
+and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html)
+
+## [Unreleased]
+
+### Added
+- Icon to display in docks and windows.
+
+[Unreleased]: https://github.com/StevisonLab/ImageCapture/compare/v0.1.0...HEAD
